--- a/cats dog TF izvl priznak.ipynb
+++ b/cats dog TF izvl priznak.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install -q tf-nightly"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [],
@@ -13,6 +22,17 @@
     "import keras\n",
     "\n",
     "from tensorflow.keras.preprocessing import image_dataset_from_directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Предварительная обработка данных \n",
+    "\n",
+    "Загрузка данных\n",
+    "\n",
+    "В этом уроке вы будете использовать набор данных, содержащий несколько тысяч изображений кошек и собак. Загрузите и извлеките zip-файл, содержащий изображения, затем создайте tf.data.Dataset для обучения и проверки с tf.keras.preprocessing.image_dataset_from_directory утилиты tf.keras.preprocessing.image_dataset_from_directory . Вы можете узнать больше о загрузке изображений в этом руководстве ."
    ]
   },
   {
@@ -68,6 +88,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Покажите первые девять изображений и меток из обучающего набора:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -95,6 +122,16 @@
     "    plt.imshow(images[i].numpy().astype(\"uint8\"))\n",
     "    plt.title(class_names[labels[i]])\n",
     "    plt.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Поскольку исходный набор данных не содержит тестового набора, \n",
+    "вы создадите его. Для этого определите, сколько пакетов данных доступно в \n",
+    "наборе проверки, используя tf.data.experimental.cardinality , а \n",
+    "затем переместите 20% из них в набор тестов."
    ]
   },
   {
@@ -128,6 +165,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Настройте набор данных для повышения производительности\n",
+    "\n",
+    "Используйте буферизованную предварительную выборку для загрузки изображений с диска без блокировки ввода-вывода. Чтобы узнать больше об этом методе, см. Руководство по производительности данных ."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -141,6 +187,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Используйте увеличение данных\n",
+    "\n",
+    "Когда у вас нет большого набора данных изображения, рекомендуется искусственно вводить разнообразие образцов, применяя случайные, но реалистичные преобразования к обучающим изображениям, такие как поворот и горизонтальный поворот. Это помогает раскрыть модель различным аспектам обучающих данных и уменьшить переобучение . Вы можете узнать больше об увеличении данных в этом руководстве ."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -150,6 +205,13 @@
     "  tf.keras.layers.experimental.preprocessing.RandomFlip('horizontal'),\n",
     "  tf.keras.layers.experimental.preprocessing.RandomRotation(0.2),\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Давайте несколько раз применим эти слои к одному и тому же изображению и посмотрим на результат."
    ]
   },
   {
@@ -182,6 +244,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Изменить масштаб значений пикселей \n",
+    "\n",
+    "Через мгновение вы загрузите tf.keras.applications.MobileNetV2 для использования в качестве базовой модели. Эта модель ожидает значений пикселей в [-1,1] , но на данный момент значения пикселей в ваших изображениях находятся в [0-255] . Чтобы изменить их масштаб, используйте метод предварительной обработки, включенный в модель.\n",
+    "\n",
+    "Примечание. В качестве альтернативы вы можете изменить масштаб значений пикселей с [0,255] до [-1, 1] используя слой изменения масштаба .\n",
+    "\n",
+    "Примечание. При использовании других tf.keras.applications обязательно проверьте документацию API, чтобы определить, ожидают ли они пикселей в [-1,1] или [0,1] , или используйте включенную функцию preprocess_input ."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -197,6 +272,19 @@
    "outputs": [],
    "source": [
     "rescale = tf.keras.layers.experimental.preprocessing.Rescaling(1./127.5, offset= -1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Создайте базовую модель из предварительно обученных сверток \n",
+    "\n",
+    "Вы создадите базовую модель на основе модели MobileNet V2, разработанной в Google. Это предварительно обучено на наборе данных ImageNet, большом наборе данных, состоящем из 1,4 млн изображений и 1000 классов. ImageNet - это набор данных для исследовательской подготовки с широким спектром категорий, таких как jackfruit и syringe . Эта база знаний поможет нам классифицировать кошек и собак по нашему конкретному набору данных.\n",
+    "\n",
+    "Во-первых, вам нужно выбрать, какой уровень MobileNet V2 вы будете использовать для извлечения функций. Самый последний уровень классификации («сверху», поскольку большинство диаграмм моделей машинного обучения идут снизу вверх) не очень полезен. Вместо этого вы будете следовать общепринятой практике - полагаться на самый последний слой перед операцией выравнивания. Этот слой называется «узким местом». Элементы слоя «узкое место» сохраняют большую универсальность по сравнению с последним / верхним слоем.\n",
+    "\n",
+    "Во-первых, создайте экземпляр модели MobileNet V2 с предварительно загруженными весами, обученными в ImageNet. Указав аргумент include_top = False , вы загружаете сеть, которая не включает слои классификации вверху, что идеально подходит для извлечения функций."
    ]
   },
   {
@@ -222,6 +310,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Эта функция экстрактор преобразует каждый 160x160x3 изображение в 5x5x1280 блок функций. Давайте посмотрим, что он делает с примером пакета изображений:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -241,12 +336,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Извлечение признаков\n",
+    "\n",
+    "На этом шаге вы заморозите сверточную базу, созданную на предыдущем шаге, и будете использовать ее в качестве средства извлечения признаков. Кроме того, вы добавляете поверх него классификатор и обучаете классификатор верхнего уровня.\n",
+    "\n",
+    "Заморозить сверточную базу\n",
+    "\n",
+    "Перед компиляцией и обучением модели важно заморозить сверточную базу. Замораживание (путем установки layer.trainable = False) предотвращает обновление весов в данном слое во время обучения. MobileNet V2 имеет много уровней, поэтому установка флага trainable всей модели на False заморозит их все."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_model.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Важное примечание о слоях BatchNormalization\n",
+    "\n",
+    "Многие модели содержат слои tf.keras.layers.BatchNormalization . Этот слой является особым случаем, и следует соблюдать меры предосторожности в контексте тонкой настройки, как показано далее в этом руководстве.\n",
+    "\n",
+    "Когда вы устанавливаете layer.trainable = False , уровень BatchNormalization будет работать в режиме вывода и не будет обновлять свою статистику среднего значения и дисперсии.\n",
+    "\n",
+    "Когда вы размораживаете модель, содержащую слои BatchNormalization, чтобы выполнить точную настройку, вы должны держать слои BatchNormalization в режиме вывода, передавая training = False при вызове базовой модели. В противном случае обновления, применяемые к необучаемым весам, уничтожат то, чему модель научилась.\n",
+    "\n",
+    "Подробнее см. В руководстве по обучению передаче ."
    ]
   },
   {
@@ -593,6 +716,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Добавить заголовок классификации\n",
+    "\n",
+    "Чтобы сгенерировать прогнозы из блока функций, tf.keras.layers.GlobalAveragePooling2D усреднение по пространственным местоположениям 5x5 , используя слой tf.keras.layers.GlobalAveragePooling2D для преобразования функций в один вектор из 1280 элементов для каждого изображения."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -609,6 +741,13 @@
     "global_average_layer = tf.keras.layers.GlobalAveragePooling2D()\n",
     "feature_batch_average = global_average_layer(feature_batch)\n",
     "print(feature_batch_average.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Примените слой tf.keras.layers.Dense чтобы преобразовать эти функции в один прогноз для изображения. Здесь вам не нужна функция активации, потому что этот прогноз будет рассматриваться как logit или необработанное значение прогноза. Положительные числа предсказывают класс 1, отрицательные числа предсказывают класс 0."
    ]
   },
   {
@@ -631,6 +770,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Создайте модель, объединив вместе уровни увеличения, изменения масштаба, base_model и функции экстрактора данных с помощью функционального API Keras. Как упоминалось ранее, используйте training = False, поскольку наша модель содержит слой BatchNormalization."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -644,6 +790,15 @@
     "x = tf.keras.layers.Dropout(0.2)(x)\n",
     "outputs = prediction_layer(x)\n",
     "model = tf.keras.Model(inputs, outputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Скомпилируйте модель \n",
+    "\n",
+    "Скомпилируйте модель перед ее обучением. Поскольку существует два класса, используйте двоичную кросс-энтропийную потерю с from_logits=True поскольку модель обеспечивает линейный вывод."
    ]
   },
   {
@@ -699,6 +854,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Параметры 2,5Х в MobileNet заморожены, но есть 1.2K обучаемых параметров в плотном слое. Они разделены между двумя tf.Variable объектами, весами и смещениями."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -737,6 +899,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Обучите модель \n",
+    "\n",
+    "После обучения в течение 10 эпох вы должны увидеть точность ~ 94% на проверочном наборе."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -772,6 +943,15 @@
     "history = model.fit(train_dataset,\n",
     "                    epochs=initial_epochs,\n",
     "                    validation_data=validation_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Кривые обучения \n",
+    "\n",
+    "Давайте посмотрим на кривые обучения точности / потери обучения и проверки при использовании базовой модели MobileNet V2 в качестве экстрактора фиксированных функций."
    ]
   },
   {
@@ -850,6 +1030,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В меньшей степени это также связано с тем, что показатели обучения представляют собой среднее значение за эпоху, тогда как показатели проверки оцениваются после эпохи, поэтому показатели проверки видят модель, которая обучалась немного дольше."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -867,6 +1054,13 @@
    ],
    "source": [
     "predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Наконец, вы можете проверить работоспособность модели на новых данных с помощью набора тестов."
    ]
   },
   {
