--- a/cats dog from save model.ipynb
+++ b/cats dog from save model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -68,12 +68,12 @@
      "output_type": "stream",
      "text": [
       "Predictions:\n",
-      " 0\n"
+      " 1\n"
      ]
     }
    ],
    "source": [
-    "image = tf.keras.preprocessing.image.load_img(\"/Users/alexeyvaganov/doc/files/predication/IMG_0214.PNG\",grayscale=False, color_mode=\"rgb\", target_size=IMG_SIZE)\n",
+    "image = tf.keras.preprocessing.image.load_img(\"/Users/alexeyvaganov/doc/files/predication/tild3064-3938-4635-a364-306638353835__960.jpg\",grayscale=False, color_mode=\"rgb\", target_size=IMG_SIZE)\n",
     "input_arr = keras.preprocessing.image.img_to_array(image)\n",
     "input_arr = np.array([input_arr])  # Convert single image to a batch.\n",
     "predictions_ = new_model.predict(input_arr)\n",
@@ -82,6 +82,27 @@
     "predictions = tf.where(predictions < 0.5, 0, 1)\n",
     "\n",
     "print('Predictions:\\n', predictions.numpy()[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow.keras.experimental' has no attribute 'export_saved_model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-8c4d1568b711>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperimental\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexport_saved_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"cat_model\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow.keras.experimental' has no attribute 'export_saved_model'"
+     ]
+    }
+   ],
+   "source": [
+    "tf.keras.experimental.export_saved_model(new_model, \"cat_model\")"
    ]
   }
  ],
