--- a/transfer_learning.ipynb
+++ b/transfer_learning.ipynb
@@ -39,6 +39,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: tensorflow\r\n",
+      "Version: 2.2.0\r\n",
+      "Summary: TensorFlow is an open source machine learning framework for everyone.\r\n",
+      "Home-page: https://www.tensorflow.org/\r\n",
+      "Author: Google Inc.\r\n",
+      "Author-email: packages@tensorflow.org\r\n",
+      "License: Apache 2.0\r\n",
+      "Location: /Users/alexeyvaganov/opt/anaconda3/lib/python3.7/site-packages\r\n",
+      "Requires: termcolor, scipy, h5py, keras-preprocessing, gast, tensorboard, opt-einsum, tensorflow-estimator, astunparse, wheel, wrapt, numpy, six, protobuf, google-pasta, grpcio, absl-py\r\n",
+      "Required-by: \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.7.6\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python -V"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "cellView": "form",
